welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:3: error: illegal start of simple expression
var j:Int=0
^occurrences:16: error: expected class or object definition
def indexOfValue(nums:Array[Int] ,value:Int): Boolean = {
^occurrences:29: error: Unmatched closing brace '}' ignored here
 }
 ^